# PaciTagger

./: .gitmodules  CMakeLists.txt  README.md
PaciStringKit/: CMakeLists.txt
PaciStringKit/pacistringkit/: PaciStringKit_global.h
PaciStringKit/pacistringkit/factories/: basefactory.cpp  basefactory.h
PaciStringKit/pacistringkit/nodes/: basenode.cpp  basenode.h  findandreplacenode.cpp  findandreplacenode.h  insertnode.cpp  insertnode.h
Tagger/: CMakeLists.txt  Tagger_zh_CN.ts
